# PyrusGeom

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
CyrusGeom2D/: angle_deg.py  circle_2d.py  convex_hull.py  geom_2d.py  line_2d.py  matrix_2d.py  polygon_2d.py  ray_2d.py  rect_2d.py  region_2d.py  sector_2d.py  segment_2d.py  soccer_math.py  triangle_2d.py  vector_2d.py
CyrusGeom2DTest/: vector_2d_test.py
PyrusGeom/: angle_deg.py  circle_2d.py  convex_hull.py  geom_2d.py  line_2d.py  math_values.py  matrix_2d.py  polygon_2d.py  ray_2d.py  rect_2d.py  region_2d.py  sector_2d.py  segment_2d.py  size_2d.py  soccer_math.py  triangle_2d.py  vector_2d.py
PyrusGeomTest/: test_angle_deg.py  test_circle_2d.py  test_convex_hull.py  test_line_2d.py  test_matrix_2d.py  test_polygon_2d.py  test_ray_2d.py  test_sector_2d.py  test_segment_2d.py  vector_2d_test.py
src/pyrusgeom/: angle_deg.py  circle_2d.py  convex_hull.py  geom_2d.py  line_2d.py  matrix_2d.py  polygon_2d.py  ray_2d.py  rect_2d.py  region_2d.py  sector_2d.py  segment_2d.py  size_2d.py  soccer_math.py  triangle_2d.py  vector_2d.py
tests/: README.md  test_angle_deg.py  test_circle_2d.py  test_convex_hull.py  test_line_2d.py  test_matrix_2d.py  test_polygon_2d.py  test_ray_2d.py  test_segment_2d.py  test_vector_2d.py
