[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrusgeom"
version = "0.1.0"
authors = [
  { name="Cyrus 2D Team", email="info@cyrus2d.com" },
]
description = "A package for handling geometry and math in SS2D"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
"Homepage" = "https://github.com/Cyrus2D/PyrusGeom"
"Bug Tracker" = "https://github.com/Cyrus2D/PyrusGeom/issues"